welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:9: error: value &&! is not a member of Boolean
while(porteBiscuit&&!estFaceMur){
                  ^