welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
while(!estSurBiscuit){
	avance()
}
if(estSurBiscuit){
	prendBiscuit()
}
while(porteBiscuit&&!estFaceMur){
	recule();
	poseBiscuit()
}
while(!porteBiscuit){
	avance()
}
